2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* afm2tfm.c, dospecial.c, emspecial.c, resident.c, writet1.c:
	Avoid undefined behaviour when char is signed.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* {,squeeze/}Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2014-04-17  Karl Berry  <karl@tug.org>

	* version 5.994 for TL'14.

2014-01-27  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvips.c: Revise procedure of reading command line arguments.
	(Windows only)

2014-01-13  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* dvips.c, resident.c: Allow multibyte string with 0x5c
	in CP932-like system. (Windows only)
	* dvips.c, output.c, search.c: Allow Unicode file names.
	(Windows only)

2013-09-16  Karl Berry  <karl@tug.org>

	* writet1.c: formatting tweaks.

2013-08-31  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* writet1.c (t1_subset_ascii_part): Remove UniqueID.
	Report from Christian Zietz (czietz/gmx/net),
	tex-k 01 Sep 2013 11:25:47 and previous.

2013-08-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* bbox.c: Fix a bug in bbdopage() to obtain correct BoundingBox in
	vertical mode of pTeX.

2013-05-30  Karl Berry  <karl@tug.org>
	
	* version 5.993 for TL'13.

2013-04-07  Karl Berry  <karl@tug.org>

	* resident.c (getdefaults) <m>: if <= 0, set to INT_MAX.
	Bug report from Stepan Orevkov and Bruno Delprat, as part
	of their Mayan TeX system (info on which:
	http://tug.org/TUGboat/tb33-3/tb105delprat.pdf).
	
        It seems there is a bug related to Dvips' section splitting and
        partial font downloading/font reuse, such that only the
        characters from the first section are available through the
        entire output.  I wasn't up for dealing with that; as a
        workaround, the above maximizes Dvips' memory available, so no
        splitting is done.
         
2013-04-05  Karl Berry  <karl@tug.org>

	* configure.ac,
	* dvips.texi,
	* dvips.h,
	* afm2tfm.2c: 5.993 to prepare for TL'13 pretest.
